--- a/front/src/assets/css/style.css
+++ b/front/src/assets/css/style.css
@@ -3355,3 +3355,14 @@ input {
   text-decoration-line: none;
 
 }
+
+/* boardingpass */
+.checkinlog {
+  font-size: 25px;
+  color: #2fdf87;
+  font-weight: 700;
+  text-decoration-line: none;
+  /* 로고 메뉴 텍스트 간격 */
+  margin-right: 200px;
+}
+
