--- a/front/src/assets/css/style.css
+++ b/front/src/assets/css/style.css
@@ -3699,10 +3699,11 @@ input {
 .reservation-number {
   background-color: rgb(255, 255, 255);
   text-align: center;
-  padding-top: 10px;
+  padding-top: 6px;
   height: 38px;
   border: 1px solid rgb(221, 221, 221);
   border-radius: 5px;
+  margin-top: 8px;
 }
 
 
