--- a/front/src/assets/css/style.css
+++ b/front/src/assets/css/style.css
@@ -85,12 +85,8 @@ h4,
   font-size: 14px;
 }
 
-/* 부가서비스 폰트 굵기 */
-.text-center h2 {
-  font-size: 30px;
-  font-weight: bold;
-  font-family: "Noto Sans KR", sans-serif;
-}
+
+
 
 /* 메뉴 active 효과 */
 
@@ -120,46 +116,8 @@ h4,
   opacity: 0.7;
 }
 
-/* .form-destination {
-  width: 80px;
-  border: 2px solid #e9ecef;
-  font-size: 16px;
-  height: 45px; 
-  text-align: center;
-  
-} */
 
-/* 검색버튼 */
-.form-search-control {
-  border: 1px solid rgb(206, 206, 206);
-  background-color: rgb(188, 220, 250);
-  border-radius: 5px;
-  font-size: 16px;
-  height: 60px;
-  width: 100px;
-  margin-top: 20px;
-  color: #000000;
-}
 
-.form-search-control:hover {
-  background-color: rgba(167, 209, 248, 0.548);
-}
-
-/* 체크인이랑 홈이랑 form 곂침 */
-/* .form-control,
-.custom-select {
-  border: 3px solid #e8eaec;
-  font-size: 14px;
-  height: 45px; 
-  margin-top: 30px;
-  color: #979797;
-}
-
-  .form-control:active, .form-control:focus, .custom-select:active, .custom-select:focus {
-    border-color: #1A374D;
-    -webkit-box-shadow: none;
-    box-shadow: none; 
-  } */
 
 .gutter-v1 {
   margin-right: -20px;
@@ -238,25 +196,7 @@ h4,
   position: relative;
 }
 
-/* 로고 글자 설정 */
-.logo {
-  font-size: 30px;
-  color: #2fdf87;
-  font-weight: 700;
-  text-decoration-line: none;
-  /* 로고 메뉴 텍스트 간격 */
-  margin-right: 200px;
-}
-.logo:hover {
-  color: #1fab65;
-}
 
-.main-logo-image {
-  width: 60px;
-  height: 40px;
-  margin-bottom: 10px;
-  margin-right: 10px;
-}
 
 /* ------------------------------------------------------------- */
 /* ------------------------------------------------------------- */
@@ -265,101 +205,7 @@ h4,
 /* ------------------------------------------------------------- */
 
 /* 메인 메뉴 */
-#menu_bar {
-  margin-left: 100px;
-}
 
-.main-menu {
-  list-style: none;
-}
-
-.main-menu > li {
-  display: inline-block;
-}
-
-/* 로그인 메뉴 */
-.login_menubar {
-  list-style: none;
-  float: right;
-  padding-top: 15px;
-  width: 160px;
-  height: 50px;
-}
-
-/* 로그인 리스트 */
-.login_menubar > li {
-  display: inline-block;
-  list-style: none;
-  padding-left: 13px;
-  padding-top: 10px;
-}
-
-.login_menubar > li > a {
-  color: rgb(180, 180, 180);
-  font-size: 11px;
-  list-style: none;
-  font-weight: bold;
-}
-
-.login_menubar > li :hover {
-  color: #878787;
-  text-decoration-line: underline;
-}
-
-/* 예약바 */
-#sub_menu {
-  /* list-style: none; */
-  /* margin:0;  */
-  /* padding:0; */
-  margin-top: 50px;
-}
-
-/* 예약바 위에 있는거 */
-#submenu {
-  height: 50px;
-  padding-top: 10px;
-  text-align: center;
-  /* background-color: #1c85fc; */
-  /* background: linear-gradient(rgb(180, 234, 255), rgb(33, 182, 246)); */
-  background: linear-gradient(
-    to right,
-    rgb(60, 167, 209),
-    rgb(27, 157, 212),
-    rgb(65, 65, 243)
-  );
-  border-radius: 15px 15px 0px 0px;
-  font-weight: bold;
-  box-shadow: none;
-  font-size: 19px;
-  /* border: 1px solid rgb(190, 190, 190); */
-}
-
-/* 공지사항 페이지 */
-
-
-/* 공지사항 위에 줄 진하게 */
-.top-line-bold > th {
-  border-top: 2px solid #000;
-  padding-left: 70px;
-  font-size: 20px;
-}
-
-.line-sorting > td {
-  padding-left: 70px;
-  font-size: 15px;
-  text-align: center;
-}
-
-/* 공지사항 제목 기준 위치 이동 */
-.line-sorting > #notice-title-location {
-  padding-right: 115px;
-  padding-left: 185px;
-}
-
-/* 공지사항, footer 사이 공백 */
-#notice-bottom-gap {
-  margin-bottom: 150px;
-}
 
 /* 공지사항 뒤로가기(목록으로) 버튼 */
 .noticeBackBtn {
@@ -437,52 +283,26 @@ h4,
   margin-bottom: 20px;
 }
 
-/* 탑승객 보드 popover */
-.boader_passenger {
-  background-color: rgb(255, 255, 255);
-  z-index: 100;
-  border: 1px solid rgb(215, 215, 215);
-}
+
 
 .hnn_none_deco_a {
   text-decoration-line: none;
 }
 
-/* 인원 리스트 */
-.style-personel {
-  padding-bottom: 10px;
+
+
+.radio-search-gap {
+  margin-top: 10px;
+}
+.hnn_none_deco_a {
+  text-decoration-line: none;
 }
 
-.style-personel-button {
-  border: none;
-  width: 30px;
-  height: 30px;
-  background-color: rgb(226, 226, 226);
-  border-radius: 5px;
-}
 
-/* 좌석등급 버튼 */
-.seat-rating {
-  border: 1px solid rgb(189, 189, 189);
-  border-radius: 10px;
-  width: 150px;
-  height: 30px;
-}
 
-.seat-rating:hover {
-  background-color: rgb(210, 224, 235);
-}
 
-.person-choice {
-  width: 110px;
-  border: 1px solid rgb(223, 222, 222);
-  border-radius: 10px;
-  background-color: #f8f7f7;
-}
 
-.person-choice:hover {
-  background-color: #e0f7ff;
-}
+
 
 /* ------------------------------------------------------------- */
 /* ------------------------------------------------------------- */
@@ -1081,13 +901,10 @@ h4,
   outline: none;
 }
 
+
 /* 메뉴 뒷배경 */
 .hero {
-  /* 크기 */
-  padding: 200px 0 10rem 0;
-  background-image: url("../images/구름.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
+
 }
 .hero.hero-inner {
   padding: 9rem 0 7rem 0;
@@ -1163,7 +980,6 @@ h4,
   cursor: pointer;
   overflow: hidden;
   border-radius: 20px;
-
   text-decoration-line: none;
 }
 .media-thumb:after {
@@ -1252,7 +1068,6 @@ h4,
 }
 
 /* 지역 아이콘 */
-
 .media-1 {
   text-align: left;
   padding-left: 20px;
@@ -1268,11 +1083,12 @@ h4,
   font-size: 18px;
 }
 
+
 /* 지역 글자 크기 */
-.location-font-size {
+/* .location-font-size {
   font-size: 16px;
   font-family: "Noto Sans KR", sans-serif;
-}
+} */
 
 .media-1 .loc .icon-room:after {
   content: "";
@@ -1391,26 +1207,78 @@ h4,
   position: relative;
 }
 
-/* 부가서비스 */
-.feature-1 {
-  padding: 30px;
-  /* 부가서비스 틀 색상 */
-  background: rgba(54, 117, 162, 0.164);
 
-  border-radius: 20px;
-  min-height: calc(50% - 15px);
-  top: 0;
-  margin-bottom: 30px !important;
+
+/* 고객센터 홈 진욱  */
+
+.jw_icon_title{
+  font-weight: bolder;
+  font-size: 25px;
+  text-decoration-line: none;
+  
 }
+.pTag {
+  font-size: 16px;
+}
+
+/* 고객센터 메뉴  */
+.untree_co-section_jw .container {
+  display: flex;
+  margin-top: 200px;
+  margin-bottom: 200px;
+}
+
+.feature-1 {
+  /* 고객센터 메뉴 색상 */
+  background: rgba(141, 141, 141, 0.534) url(../images/picture1.png) no-repeat;
+  padding: 30px;
+  border-radius: 20px;
+  background-position: right 15px bottom 15px;
+  min-height: calc(50% - 15px);
+  margin-bottom: 30px !important;
+  width: 1000px;
+}
+
 @media (max-width: 991.98px) {
   .feature-1 {
     display: block !important;
+  } 
+}
+.feature-2 {
+  /* 고객센터 메뉴 색상 */
+  background: rgba(141, 141, 141, 0.534) url(../images/picture2.png) no-repeat;
+  padding: 30px;
+  border-radius: 20px;
+  background-position: right 15px bottom 15px;
+  min-height: calc(50% - 15px);
+  margin-bottom: 30px !important;
+  width: 1000px;
+}
+
+@media (max-width: 991.98px) {
+  .feature-2 {
+    display: block !important;
   }
 }
-.feature-1 h3 {
-  font-size: 1.2rem;
-  font-weight: 700;
+
+.feature-3 {
+  /* 고객센터 메뉴 색상 */
+  background: rgba(141, 141, 141, 0.534) url(../images/picture3.png) no-repeat;
+  padding: 30px;
+  border-radius: 20px;
+  background-position: right 15px bottom 15px;
+  min-height: calc(50% - 15px);
+  margin-bottom: 30px !important;
+  width: 1000px;
 }
+
+@media (max-width: 991.98px) {
+  .feature-3 {
+    display: block !important;
+  }
+}
+
+
 
 /* 큰 예약바 전체 */
 
@@ -2038,7 +1906,11 @@ h4,
 .site-footer {
   font-size: 14px;
   color: #777;
+
+  line-height: 1.6;
 }
+
+
 .customer-1 {
   height: auto;
 }
@@ -2063,6 +1935,7 @@ h4,
   margin: 0px auto;
   background: rgb(255, 255, 255);
 }
+
 
 .page-title {
   font-size: 30px;
@@ -2212,6 +2085,7 @@ h4,
 }
 
 /* dev */
+
 
 .site-footer .inner {
   padding-top: 0px;
@@ -2575,6 +2449,7 @@ h4,
 }
 
 /* 상민이 형 꺼 지워도 된다고 함 */
+
 /* .table tr td {
   border: 1px solid #f3f3f3;
 } */
@@ -2802,6 +2677,287 @@ input {
 
 /* 예약 조회 페이지 */
 
+
+
+
+/* !홈화면 시작 */
+/******** nav바 ********/
+/* 로고 글자 설정 */
+.logo {
+  font-size: 30px;
+  color: #2fdf87;
+  font-weight: 700;
+  text-decoration-line: none;
+  /* 로고 메뉴 텍스트 간격 */
+  margin-right: 200px;
+}
+.logo:hover {
+  color: #1fab65;
+}
+
+.main-logo-image {
+  width: 60px;
+  height: 40px;
+  margin-bottom: 10px;
+  margin-right: 10px;
+}
+
+/* 로그인 메뉴 */
+.login_menubar {
+  list-style: none;
+  float: right;
+  padding-top: 15px;
+  width: 140px;
+  height: 50px;
+}
+
+/* 로그인 리스트 */
+.login_menubar > li {
+  display: inline-block;
+  list-style: none;
+  padding-left: 13px;
+  padding-top: 10px;
+}
+
+.login_menubar > li > a {
+  color: rgb(180, 180, 180);
+  font-size: 11px;
+  list-style: none;
+  font-weight: bold;
+}
+
+.login_menubar > li :hover {
+  color: #878787;
+  text-decoration-line: underline;
+}
+/******** nav바 끝********/
+
+
+/********예약바 시작********/
+/* home - 큰 예약바 - form */
+.home-big-reservation-form {
+  position: relative;
+  -webkit-box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.3);
+  box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.3);
+  border-radius: 0px 0px 10px 10px;
+  z-index: 9;
+  padding: 30px;
+  background: rgb(255, 255, 255);
+}
+
+/* 예약바 뒷배경 */
+#home-reservation-backimage {
+  padding: 200px 0 10rem 0;
+  background-image: url("../images/구름.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+/* 예약바 위에 있는거 */
+#submenu {
+  margin-top: 50px;
+  height: 50px;
+  padding-top: 10px;
+  text-align: center;
+  background: linear-gradient(
+    to right,
+    rgb(60, 167, 209),
+    rgb(27, 157, 212),
+    rgb(65, 65, 243)
+  );
+  border-radius: 15px 15px 0px 0px;
+  font-weight: bold;
+  box-shadow: none;
+  font-size: 19px;
+  /* border: 1px solid rgb(190, 190, 190); */
+}
+
+/* 출발공항 도착공항 탑승일 탑승자 좌석등급 */
+.form-control-nhh {
+  border: 2px solid #e8eaec;
+  font-size: 16px;
+  height: 45px;
+  margin-top: 20px;
+  color: #5e5e5e;
+}
+
+
+/* 편도 / 왕복 버튼 */
+.trip-button {
+  width: 75px;
+  height: 45px;
+  padding-top: 8px;
+  text-align: center;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.trip-button:hover{
+  cursor: pointer;
+}
+
+/* 왕복 편도 버튼 선택 될 때 */
+.nhhLabelTag input[type=radio]:checked+label{
+  border: 3px solid rgb(118, 164, 252);
+  border-radius: 5px;
+}
+
+/* 검색버튼 */
+.form-search-control {
+  border: 1px solid rgb(207, 206, 206);
+  background-color: rgba(223, 227, 231, 0.829);
+  border-radius: 5px;
+  font-size: 16px;
+  height: 50px;
+  width: 130px;
+  color: #000000;
+  float: right;
+}
+
+.form-search-control:hover {
+  background-color: rgba(193, 212, 231, 0.829);
+  border: 1px solid rgb(146, 144, 144);
+}
+
+
+/* 탑승객 보드 popover */
+.boader_passenger {
+  background-color: rgb(255, 255, 255);
+  z-index: 100;
+  border: 1px solid rgb(215, 215, 215);
+}
+
+/* 탑승 인원 리스트 */
+.style-personel {
+  padding-bottom: 10px;
+}
+
+.style-personel-button {
+  border: none;
+  width: 30px;
+  height: 30px;
+  background-color: rgb(226, 226, 226);
+  border-radius: 5px;
+}
+
+.person-choice {
+  width: 110px;
+  border: 1px solid rgb(223, 222, 222);
+  border-radius: 10px;
+  background-color: #f8f7f7;
+}
+
+.person-choice:hover {
+  background-color: #e0f7ff;
+}
+
+/* 좌석등급 버튼 */
+.seat-rating {
+  border: 1px solid rgb(189, 189, 189);
+  border-radius: 10px;
+  width: 150px;
+  height: 30px;
+}
+
+.seat-rating:hover {
+  background-color: rgb(210, 224, 235);
+}
+
+
+/********예약바 끝********/
+
+/********여행 추천지 시작********/
+.travel-recommendations-text h2 {
+  font-size: 30px;
+  font-weight: bold;
+  font-family: "Noto Sans KR", sans-serif;
+  padding-left: 285px;
+  margin-top: 30px;
+}
+
+/* 지역 글자 크기 */
+.location-font-size {
+  font-size: 16px;
+  font-family: "Noto Sans KR", sans-serif;
+}
+
+/* 지역 아이콘 */
+/* media-1 위에 있음 */
+
+/********여행 추천지 끝********/
+
+/********home 공지사항 시작********/
+.home-notice-title > h3 {
+  /* text-align: center; */
+  font-size: 35px;
+  font-family: "Noto Sans KR", sans-serif;
+  font-weight: bold;
+  padding-left: 530px;
+  width: 1060px;
+}
+
+/* 공지사항 이동 버튼 */
+.home-notice-link > a {
+  float: right;
+  font-size: 35px;
+  font-weight: bold;
+  text-decoration-line: none;
+  padding-right: 30px;
+}
+
+.home-notice-link > a:hover {
+  color: #328bff;
+}
+
+/* 공지사항 위에 줄 진하게 */
+.top-line-bold > th {
+  border-top: 2px solid #000;
+  padding-left: 70px;
+  font-size: 20px;
+}
+
+/* 공지사항, footer 사이 공백 */
+#notice-bottom-gap {
+  margin-bottom: 150px;
+}
+
+#home-noticeId {
+  padding-left: 70px;
+}
+
+#home-notice-title-location {
+  padding-left: 70px;
+}
+
+#home-notice-title {
+  margin-right: 30px;
+}
+
+
+/********home 공지사항 끝********/
+
+/********공통 footer 시작********/
+/* Top Button 버튼 누르면 위로 올라가는 css */
+.button-click-top-move {
+  font-weight: bold;
+  font-size: 20px;
+  width: 70px;
+  height: 70px;
+  border-radius: 100%;
+  cursor: pointer;
+  margin-right: 10px;
+}
+
+.scroll-top-move {
+  position: fixed;
+  right: 2%;
+  bottom: 5%;
+  z-index: 1;
+}
+/********공통 footer 끝********/
+
+
+/* !홈화면 끝 */
 .searchRow {
   display: inline-block;
   width: 100%;
@@ -2865,22 +3021,6 @@ input {
   padding-top: 50px;
   padding-left: 60px;
   padding-bottom: 30px;
-}
-
-.test1 {
-  padding-top: 10px;
-  margin-left: 50px;
-}
-
-.test2 {
-  padding-top: 10px;
-  margin-left: 110px;
-}
-
-.btn1 {
-  width: 365px;
-  margin: 0 auto;
-  margin-top: 30px;
 }
 
 .searchReservationBtn {
@@ -3403,7 +3543,7 @@ input {
   margin-top: 50px;
   margin-left: 43%;
 }
-
+/* 어드민 공지사항 지우 끝 */
 
 
 /*****************체크인*****************/
@@ -3566,16 +3706,14 @@ input {
 .reservation-number {
   background-color: rgb(255, 255, 255);
   text-align: center;
-  padding-top: 10px;
+  padding-top: 6px;
   height: 38px;
   border: 1px solid rgb(221, 221, 221);
   border-radius: 5px;
+  margin-top: 8px;
 }
 
-.line-sorting > td > a {
-  text-decoration-line: none;
 
-}
 
 
 /* 관리자 공지사항 수정 / 삭제 시작 */
@@ -3597,3 +3735,70 @@ input {
 }
 
 /* 관리자 공지사항 수정 / 삭제 끝 */
+
+
+
+/* 예약 상세 조회 페이지 - 지우 시작 */
+
+.seeReservationForm {
+  width: 1000px;
+  height: auto;
+  margin: 0 auto;
+  border: 1px solid black;
+  border-radius: 10px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.seeReservationNo1 {
+  width: 450px;
+  height: 50px;
+  float: left;
+  margin-top: 10px;
+  margin-left: 50px;
+}
+
+.seeReservationNo2 {
+  width: 450px;
+  height: 50px;
+  float: right;
+  margin-top: 10px;
+}
+
+.seeReservationNo3 {
+  float:right;
+}
+
+.seeReservationNo4 {
+  float: left;
+}
+
+.seeReservationNo5 {
+  width: 500px;
+  height: 50px;
+  margin-left: 280px;
+  margin-top: 50px;
+}
+
+.seeReservationInput {
+  height: 35px;
+  width: 300px;
+  border-radius: 10px;
+  padding-left: 10px;
+}
+
+
+/* 예약 상세 조회 페이지 - 지우 끝 */
+
+
+
+/* boardingpass */
+.checkinlog {
+  font-size: 25px;
+  color: #2fdf87;
+  font-weight: 700;
+  text-decoration-line: none;
+  /* 로고 메뉴 텍스트 간격 */
+  margin-right: 200px;
+}
+
