--- a/front/src/assets/css/sm/select.css
+++ b/front/src/assets/css/sm/select.css
@@ -1,6 +1,7 @@
 #app {
 	width: 400px;
 	margin: 0 auto;
+	
 }
 #bottom {
 	width: 500px;
@@ -22,7 +23,13 @@
 	width: 50px;
 	height: 50px;
 	border-radius: 3px;
+	margin-bottom: 10px;
+
 }
+.line:first-child {
+	margin-top: 50px; 
+	margin-top: 50px; 
+  }
 .seat:hover {
 	opacity: 0.5;
 	cursor: pointer;
@@ -30,21 +37,52 @@
 .load{
     background-color:white ;
 }
+
+
 .enable {
-    background:lightgreen;
+    
+	background-image: url("../../images/seatStyle7.png");
+	background-repeat: no-repeat;
+	background-size: cover;
   }
 
   /* 선택한 좌석 */
   .disable{
-    background:orangered; 
+    /* background-color: orangered; */
+	background-image: url("../../images/seatStyle8.png");
+	background-repeat: no-repeat;
+	background-size: cover;
   }
   
   /* 선택불가 좌석 */
   .soldout{
-    background:blue;
+   
     /* opacity: .5; */
+	background-image: url("../../images/seatStyle9.png");
+	background-repeat: no-repeat;
+	background-size: cover;
+     
   }
 
   .sangmin_choose_table_content {
 	--bs-table-bg: none !important;
   }
+.seatButton{
+	margin-left: 280px;
+	width: 100px;
+	margin-bottom: 25px;
+	margin-top: 15px;
+}
+
+#selected_seats{
+	margin-top: 10px;
+}
+
+#seats{
+	width: 400px;
+
+}
+.createSeatsNum{
+	padding-left: 150px;
+	padding-bottom: 10px;
+}
