--- a/front/src/assets/css/style.css
+++ b/front/src/assets/css/style.css
@@ -3695,6 +3695,35 @@ input {
 
 /*****************체크인*****************/
 
+.checkin_choose_btn {
+  box-sizing: border-box;
+  appearance: none;
+  background-color: transparent;
+  border: 2px solid #1A374D;
+  border-radius: 0.6em;
+  color: #1A374D;
+  cursor: pointer;
+  align-self: center;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1;
+  padding: 1.2em 2.8em;
+  text-decoration: none;
+  text-align: center;
+  text-transform: uppercase;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  margin-left: 20px;
+
+  width: 200px;
+  &:hover {
+    box-shadow: 0 0 40px 40px #1A374D inset;
+    /* color: white; */
+    color: #fff;
+  }
+}
+
+
 /* 모달 */
 .modal-title {
   color: white;
