검색 css 수정, 파비콘 수정

--- a/front/src/assets/css/jy/style_jy.css
+++ b/front/src/assets/css/jy/style_jy.css
@@ -6,3 +6,18 @@
 .admin_board_main tr td {
     vertical-align: top;
 }
+
+.adminSearchSelect {
+    height: 39px !important;
+    margin-top: 7px;
+}
+
+.adminSearchBtn {
+    margin-top: 7px;
+    width: 100px;
+    height: 39px !important;
+}
+
+.adminSearch {
+    margin-left: 250px !important;
+}
